# cpp-template

./: CMakeLists.txt  CMakePresets.json  foo.cxx  module.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
